# FlashTrain

./: .deepsource.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  dev_flashtrain.yml  requirements.txt  requirements_torch.txt
flashtrain/: actvn_reloading.py  logger.py  tensor_cache.py  tensor_cache_utils_kvikio.py  utils.py
flashtrain/cuda_registered_allocator/: allocator.cpp  setup.py
flashtrain/docs/: 2D_PARALLELISM.md  ASYNC_FILE_IO.md  GPUDIRECT_STORAGE.md  MEMORY_ALLOCATOR.md  MULTIPROCESSING.md  PCIE.md  RECOMPUTE.md  TROUBLESHOOTING_STUCK.md
flashtrain/malloc_hook/: hook.cpp  make.sh
flashtrain/scripts/: step_3_convert_to_numpy_weights.py
flashtrain/tensor_cache/: __init__.py  adapters.py  dummy_hooks.py  host_pinned_memory_allocator.py  monkey_patched_deepspeed_checkpoint.py  offload_engine.py  pipeline_tensor_cache.py  profiler_tree.py  scope_tree.py  tensor_cache.py  uniqueid_utils.py  utils.py  utils_kvikio.py
flashtrain/tensor_cache/configs/: 2create_raid_0_bafs.sh  3create_fs_raid_0_bafs.sh  4mount_bafs.sh  99destroy_raid_0_bafs.sh  _mount_all_func.sh  check_nvidia_gpu_clock.sh  clear_stored_tensors_bafs.sh  configs.py  create_fs_raid_0_bafs.sh  create_namespaces.sh  create_raid_0_bafs.sh  create_two_namespaces.sh  init_directory_raid_0_bafs.sh  mount_bafs.sh  mount_bafs_secondary.sh  set_a100_pcie_clock.sh  set_paranoid.sh  set_pytorch_backend_allocator_async.sh  utils.py
flashtrain/tensor_cache/reevaluator/: README.md  deepspeed.py  megatron_deepspeed.py
flashtrain/tests/: single-node-io.py  test_cuda_registered_allocator.py  test_host_pinned_memory_allocator.py  test_kvikio_async_io.py  test_malloc_hook.py  test_monkey_patched_deepspeed_checkpoint.py  test_tensor_cache.py  tests_actvn_reloading.py
flashtrain/tests/bench_h5/: README.md  bench_h5.py
flashtrain/tests/huggingface/: LICENSE  hf_utils.py  test_bert.py  test_gpt2.py  test_llama.py  test_llama2.py  test_llama_inference.py  test_load_datasets.py  test_opt.py  (+1 more)
flashtrain/tests/tests_custom_allocator/cuda_registered_allocator/: CMakeLists.txt
flexgen/: utils.py
flexgen/experimental/: cost_model.py
flexgen/scripts/: step_2_consolidate_992_shards_to_singleton.py
flexgen_benchmark/: README.md
flexgen_benchmark/flexgen/: bench_suite.py
flexgen_benchmark/hf_ds/: bench_hf.py  hf_opt.py
flexgen_benchmark/petals/: run_opt_requests.py
(+8 files in other folders)
